--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									and process planning application</a></h2>
 									<p>Designed, developed and implemented an application for a plastics factry<br /></p>
 								</header>
-								<a href="https://github.com/fedebanca/AplicacionEkson" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/fedebanca/AplicacionEkson" class="image main"><img src="images/Plastic wrappings factory.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/fedebanca/AplicacionEkson" class="button large">View Project</a></li>
 								</ul>
@@ -68,7 +68,7 @@
 										<h2><a href="https://github.com/fedebanca/DISILAB-reservas-test_automation_cypress">Web Aplication<br />
 										Testing</a></h2>
 									</header>
-									<a href="https://github.com/fedebanca/DISILAB-reservas-test_automation_cypress" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/fedebanca/DISILAB-reservas-test_automation_cypress" class="image fit"><img src="images/web application testing 1.jpeg" alt="" /></a>
 									<p>Design, development, and execution of automatic tests for a web application.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/fedebanca/DISILAB-reservas-test_automation_cypress" class="button">View Project</a></li>
@@ -77,10 +77,10 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="https://github.com/Zheoden/CardioV-Video-Process">Echocardiogram Vmage and Video<br />
+										<h2><a href="https://github.com/Zheoden/CardioV-Video-Process">Echocardiogram Image and Video<br />
 										Recognition</a></h2>
 									</header>
-									<a href="https://github.com/Zheoden/CardioV-Video-Process" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/Zheoden/CardioV-Video-Process" class="image fit"><img src="images/Exhocardiogram.jpeg" alt="" /></a>
 									<p>Investigation, design, development, and implementation of an image recognition application for the medical field.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Zheoden/CardioV-Video-Process" class="button">View Project</a></li>
@@ -92,7 +92,7 @@
 										<h2><a href="https://github.com/fedebanca/Tp_Disenio_2020">College project<br />
 										Diseño de Sistemas</a></h2>
 									</header>
-									<a href="https://github.com/fedebanca/Tp_Disenio_2020" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://github.com/fedebanca/Tp_Disenio_2020" class="image fit"><img src="images/Diseño de sistemas.jpeg" alt="" /></a>
 									<p>Proyecto de diseño de sistemas 2020</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/fedebanca/Tp_Disenio_2020" class="button">View Project</a></li>
@@ -104,7 +104,7 @@
 										<h2><a href="https://github.com/fedebanca/tp-2019-2c-Pasaron-cosas">College project<br />
 										Sistemas Operativos</a></h2>
 									</header>
-									<a href="https://github.com/fedebanca/tp-2019-2c-Pasaron-cosas" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="https://github.com/fedebanca/tp-2019-2c-Pasaron-cosas" class="image fit"><img src="images/Operative System.jpeg" alt="" /></a>
 									<p>Proyecto de sistemas operativos 2019</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/fedebanca/tp-2019-2c-Pasaron-cosas" class="button">View Project</a></li>
@@ -162,12 +162,6 @@
 							</section>
 						</section>
 					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
 			</div>
 
 		<!-- Scripts -->
